<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/driverdetails"
    tools:showIn="@layout/activity_loc"
    tools:context=".digisuraksh.BaseNavigationDrawer"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingTop="250dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="0dp">

    <RelativeLayout
        android:id="@+id/slideview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_up_corners"
        android:backgroundTint="@color/silver">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="8dp"
            android:alpha="0.7"
            android:text="@string/slide_up"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:visibility="gone">

        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:alpha="0.6"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_arrowdown" />

        <ImageView
            android:id="@+id/driverimage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="113dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/driverimage" />

        <TextView
            android:id="@+id/nameview"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="152dp"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_marginTop="190dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/driverline">

        </View>

        <TextView
            android:id="@+id/phonenum"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="205dp"
            android:drawableStart="@drawable/ic_iconphone"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/clock"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="245dp"
            android:drawableStart="@drawable/ic_clock"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="280dp"
            android:drawableStart="@drawable/ic_distance"
            android:textColor="@color/black" />
    </RelativeLayout>


</FrameLayout>